@@ -1135,11 +1135,12 @@
 
   <module id="gnome-power-manager">
     <maintainer id="hughsie"/>
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="true"/>
   </module>
 
   <module id="gnomeradio">
