@@ -736,7 +736,7 @@
       <module id="gnome-netstatus"/>
       <module id="gnome-nettool"/>
       <module id="gnome-panel"/>
-      <module id="gnome-power-manager"/>
+      <module id="gnome-power-manager" branch="gnome-2-24"/>
       <module id="gnome-screensaver"/>
       <module id="gnome-session"/>
       <module id="gnome-settings-daemon"/>
