@@ -1,6 +1,11 @@
 2008-09-04 Gil Forcada <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: gnome-power-manager branched for GNOME 2.24.
+
+2008-09-04 Gil Forcada <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: Sound-juicer branched for GNOME 2.24.
 
 2008-09-03  Claude Paroz  <claude@2xlibre.net>
